--- a/web/css/chatbot.css
+++ b/web/css/chatbot.css
@@ -69,7 +69,7 @@
 {
     height: 10%;
     width: 100%;
-    background-color: rgb(46, 80, 235);
+    /* background-color: rgb(46, 80, 235); */
     z-index: 1;
     display: flex;
     flex-direction: row;
@@ -78,13 +78,55 @@
 #chat-body
 {
     height: 78%;
+    background-color: grey;
+    padding: 2%;
+}
+
+#body-inner
+{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border-radius: 3%;
+    /* margin: 5%; */
+    display: flex;
+    padding: 4%;
+    flex-direction: column;
+    overflow: scroll;
+    overflow-x: auto;
+}
+
+.msg-left
+{
+    background-color: teal;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    margin-right: 35%;
+    padding: 3%;
+    text-align: justify;
+    color: white;
+    width: fit-content;
+    align-self: flex-start;
+}
+
+.msg-right
+{
+    background-color: darkolivegreen;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    margin-left: 35%;
+    padding: 3%;
+    text-align: justify;
+    color: white;
+    width:fit-content;
+    align-self: flex-end;
 }
 
 #chat-footer
 {
     height: 12%;
     width: 100%;
-    background-color: rgb(46, 80, 235);
+    /* background-color: rgb(46, 80, 235); */
     display: flex;
     flex-direction: row;
 }
